# MOSAIC

./: .gitignore  HDT_HSENT_LABELED_ANALYSIS.md  LABELED_GRAPH_PROGRESS.md  MERGE_PLAN.md  README.md  debug_generation.py  environment.yaml  environment_eval.yaml  environment_server.yaml  pyproject.toml
.claude/: CLAUDE.md
bash_scripts/: README.md  eval_benchmarks.sh  eval_benchmarks_auto.sh  eval_finetune_benchmarks.sh  finetune_benchmarks.sh  precompute_benchmarks.sh  stop_precompute_benchmarks.sh  test_loss_benchmarks.sh  train_benchmarks.sh  train_lr_sweep.sh
configs/: README.md  STANDARD_PARAMETERS_TEMPLATE.md  eval_finetune.yaml  generation_demo.yaml  primed_gen.yaml  realistic_gen.yaml  test.yaml  test_ddp.sh  test_ddp_speedup.sh  test_loss.yaml  train.yaml  train_ddp_examples.yaml
docs/: SETUP_AND_TRAINING.md  architecture.md  codebase.md  commands_reference.md  contributing.md  expected_results.md  hgraph.md  htokenization.md  index.md  metric.md  motif_conditional.md  polygraph_metric.md  property_experiment.md  realistic.md  server_setup.md  setup.md  setup_gcp.md  setup_training.md  tokenization.md  training_steps.md  vis_htokenization.md  visualization.md
scripts/: BENCHMARK_SPECTRAL_README.md  RUN_BENCHMARK.md  benchmark_spectral.py  benchmark_tokenization_stats.py  check_coconut_config.py  compare_finetune_results.py  compare_results.py  eval_finetune.py  export_moses_smiles.py  finetune.py  precompute_reference_graphs.py  prepare_coconut_data.py  primed_gen.py  realistic_gen.py  test.py  test_loss.py  train.py  visualize_comparison.py  (+5 more)
(+166 files in other folders)
